<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="16dp"
  tools:context=".MainActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/headerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
      android:id="@+id/weatherIcon"
      android:layout_width="96dp"
      android:layout_height="96dp"
      android:background="@drawable/weather_icon_bg"
      android:contentDescription="@string/weather_icon_desc"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="ImageContrastCheck" />

    <TextView
      android:id="@+id/textDegrees"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:text="--"
      android:textSize="34sp"
      android:textColor="@color/textColorMain"
      app:layout_constraintStart_toEndOf="@+id/weatherIcon"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/textCity"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:text="@string/unknown_city"
      android:textAlignment="textEnd"
      android:textColor="@color/textSecondary"
      android:textSize="20sp"
      android:layout_marginTop="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/weatherIcon"
      app:layout_constraintTop_toBottomOf="@+id/textDegrees" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/btnDegreesType"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:clickable="true"
      android:contentDescription="@string/degrees_type"
      android:layout_marginStart="16dp"
      android:focusable="true"
      app:backgroundTint="@color/btnDegreesType"
      app:layout_constraintStart_toEndOf="@+id/textDegrees"
      app:layout_constraintTop_toTopOf="parent" />
    <TextView
      android:id="@+id/textDegreesType"
      android:text="°C"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:elevation="34dp"
      android:textColor="@android:color/white"
      android:textSize="34sp"
      android:textAlignment="center"
      app:layout_constraintBottom_toBottomOf="@+id/btnDegreesType"
      app:layout_constraintEnd_toEndOf="@+id/btnDegreesType"
      app:layout_constraintStart_toStartOf="@+id/btnDegreesType"
      app:layout_constraintTop_toTopOf="@+id/btnDegreesType" />
    <TextView
      android:id="@+id/textTemperature"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/temperature_bg"
      android:paddingLeft="7dp"
      android:paddingTop="2dp"
      android:paddingRight="7dp"
      android:paddingBottom="2dp"
      android:text="@string/temperature"
      android:textColor="@color/textInactive"
      android:textSize="16sp"
      android:layout_marginTop="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/weatherIcon"
      tools:ignore="TextContrastCheck" />
    <TextView
      android:id="@+id/textDescription"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/weather_description"
      android:textAlignment="textEnd"
      android:textSize="20sp"
      android:textColor="@color/textColorMain"
      android:layout_marginStart="8dp"
      android:layout_marginTop="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/textTemperature"
      app:layout_constraintTop_toBottomOf="@+id/textCity" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/inputCity"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:hint="@string/city_name"
    android:minHeight="48dp"
    android:inputType="text"
    android:imeOptions="actionDone"
    android:textColor="@color/textColorMain"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btnRefresh"
    app:layout_constraintStart_toStartOf="parent"
    tools:ignore="TextContrastCheck" />

  <Button
    android:id="@+id/btnRefresh"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/green"
    android:stateListAnimator="@null"
    android:text="@string/refresh"
    android:textAllCaps="false"
    android:textColor="@color/grey"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/inputCity" />
  <HorizontalScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:contentDescription="@string/temperature_description"
    android:layout_marginBottom="16dp"
    android:layout_marginTop="16dp"
    app:layout_constraintBottom_toTopOf="@+id/inputCity"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/headerLayout">
    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="wrap_content"
      android:layout_height="match_parent">

      <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/temperature"
        android:layout_width="500dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
      <TextView
        android:id="@+id/textCurrentTemp"
        android:text="@string/current_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textSize="16sp"
        android:textColor="@color/textInactive"
        android:background="@drawable/temperature_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature"
        tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
